...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Скролл отключен-->
        <scene sceneID="XwP-oQ-b2y">
            <objects>
                <tableViewController id="rda-ld-K44" userLabel="Скролл отключен" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7Up-Ou-J5s">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <sections>
                            <tableViewSection id="kxl-yt-iTn">
...
                                                <constraint firstItem="H32-Gr-04n" firstAttribute="leading" secondItem="NtZ-Dh-qjh" secondAttribute="leading" id="GsZ-0f-7gQ"/>
                                                <constraint firstItem="H32-Gr-04n" firstAttribute="top" secondItem="NtZ-Dh-qjh" secondAttribute="top" id="LOI-bs-iJo"/>
                                                <constraint firstAttribute="trailing" secondItem="H32-Gr-04n" secondAttribute="trailing" id="Z2a-JO-1jl"/>
                                                <constraint firstAttribute="bottom" secondItem="H32-Gr-04n" secondAttribute="bottom" id="us0-bM-FMx"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="LastCat">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKu-1b-HrU">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                    <state key="normal" title="Видимая вьюшка"/>
                                                    <connections>
                                                        <segue destination="sZy-EZ-BIs" kind="show" id="vjI-eR-YLf"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAc-tJ-Wee">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                    <state key="normal" title="Перекрытие вьюшкой"/>
                                                    <connections>
                                                        <segue destination="vt0-cO-Je0" kind="show" id="HSJ-dz-7sA"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jjh-By-A5T">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                                    <state key="normal" title="isHittable != isVisible"/>
                                                    <connections>
                                                        <segue destination="dVR-0F-IMZ" kind="show" id="8Kv-Kf-2Mg"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                    <view key="view" contentMode="scaleToFill" id="QX0-4Q-Aq7">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XaO-iJ-t6c">
                                <rect key="frame" x="67" y="308.5" width="240" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="InvisibleButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="VRB-7Q-QJA"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <connections>
                                    <segue destination="3dC-Sa-YMv" kind="show" id="NB2-gC-Qrm"/>
...
